--- a/notes.css
+++ b/notes.css
@@ -13,6 +13,7 @@ body {
     background: #fff;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    padding-bottom: 50px;
 }
 
 .title {
