--- a/notes.css
+++ b/notes.css
@@ -88,3 +88,14 @@ body {
 .note-card:hover p {
     color: #3e4a89;
 }
+
+.ppt-icon {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.ppt-icon .icon {
+    width: 60px; /* Adjust size as needed */
+    height: auto;
+    display: inline-block;
+}
